<resources>
    <string name="app_name">Cocktail Bar</string>

    <!-- Common -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>

    <!-- List Fragment -->
    <string name="add_cocktail_button">Add cocktail</string>
    <string name="my_cocktails">My cocktails</string>
    <string name="add_first_cocktail">Add your first cocktail here</string>
    <string name="no_cocktails">No cocktails</string>
    <string name="share_message">See what cocktails I created in the Cocktail Bar app!\n%1$s and others\nDo you want to try it?</string>

    <!-- Details Fragment -->
    <string name="recipe_with_colon">Recipe:</string>
    <string name="edit">Edit</string>
    <string name="cocktail_not_found">Cocktail not found</string>

    <!-- Editing Fragment -->
    <string name="title">Title</string>
    <string name="add_title">Add title</string>
    <string name="optional_field">Optional field</string>
    <string name="description">Description</string>
    <string name="recipe">Recipe</string>
    <string name="load_image">Load image</string>
    <string name="save">Save</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="delete_ingredient">Delete ingredient</string>
    <string name="add_at_least_one_ingredient">Add at least one ingredient</string>
    <string name="ingredient">Ingredient</string>
    <string name="add">Add</string>
    <string name="confirm_deletion">Confirm the deletion</string>
    <string name="deletion_confirm">Are you sure you want to delete this recipe?</string>
    <string name="delete">Delete</string>
    <string name="share_cocktails">Share cocktails</string>
    <string name="remove">Remove</string>
    <string name="change_the_image">Change the image</string>
    <string name="pick_from_gallery">Pick from gallery</string>
</resources>