<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/no_cocktails_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="placeholder_image_view, add_first_cocktail_text_view, add_first_cocktail_arrow_image_view"
            tools:visibility="gone" />

        <ImageView
            android:id="@+id/placeholder_image_view"
            android:layout_width="@dimen/no_cocktails_placeholder_size"
            android:layout_height="@dimen/no_cocktails_placeholder_size"
            android:layout_marginTop="33dp"
            android:contentDescription="@string/no_cocktails"
            android:src="@drawable/img_summer_holidays"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/share_image_view"
            android:layout_width="@dimen/corner_button_size"
            android:layout_height="@dimen/corner_button_size"
            android:layout_margin="@dimen/corner_button_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/share_cocktails"
            android:src="@drawable/ic_share"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/my_cocktails_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/my_cocktails"
            android:textAppearance="@style/Text.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/placeholder_image_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cocktails_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:clipToPadding="false"
            android:paddingBottom="100dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_cocktails_text_view"
            app:spanCount="2"
            tools:listitem="@layout/item_cocktail_card"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/add_first_cocktail_text_view"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/add_first_cocktail"
            android:textAppearance="@style/Text.Normal"
            android:textColor="@color/gray_500"
            app:layout_constraintBottom_toTopOf="@id/add_first_cocktail_arrow_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/add_first_cocktail_arrow_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="117dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_long_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomappbar_height"
        android:layout_gravity="bottom"
        app:fabCradleMargin="8dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_cocktail_button"
        android:src="@drawable/ic_add"
        app:fabCustomSize="@dimen/fab_size"
        app:layout_anchor="@id/bottomAppBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>