<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/cocktail_image_view"
        android:layout_width="0dp"
        android:layout_height="330dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/delete_image_view"
        android:layout_width="@dimen/corner_button_size"
        android:layout_height="@dimen/corner_button_size"
        android:layout_margin="@dimen/corner_button_margin"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_delete_trash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorError" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/card_view_top_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.cardview.widget.CardView
        android:id="@+id/details_card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="-54dp"
        app:cardCornerRadius="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_top_guideline">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textAppearance="@style/Text.Subtitle"
                    tools:text="Pink Lemonade" />

                <TextView
                    android:id="@+id/description_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/Text.Normal"
                    tools:text="To make this homemade pink lemonade, simply combine all the ingredients in a pitcher." />

                <TextView
                    android:id="@+id/ingredients_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/Text.Normal"
                    tools:text="9 cups water\n—\n2 cups white sugar\n—\n2 cups fresh lemon juice\n—\n1 cup cranberry juice, chilled\n—\nice as needed" />

                <TextView
                    android:id="@+id/recipe_subtitle_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center_horizontal"
                    android:text="@string/recipe_with_colon"
                    android:textAppearance="@style/Text.Subnormal" />

                <TextView
                    android:id="@+id/recipe_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/Text.Normal"
                    tools:text="Muddle lime with leaves from the mint using a pestle and mortar. Mix with sprite. Add ice if needed." />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/edit_button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/ripple_button"
                    android:text="@string/edit"
                    android:textAppearance="@style/Text.OnButton" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>